force-app/main/default/objects/Opportunity/fields/Discount_Percent_Status__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent_Status__c</fullName>
    <label>割引率の状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>承認済み</fullName>
            </value>
            <value>
                <fullName>未承認</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>