force-app/main/default/objects/Opportunity/fields/inputTextTest__c.field-meta.xml
<CustomField>
    <fullName>inputTextTest__c</fullName>
    <label>入力テキストテスト</label>
    <length>100</length>
    <type>Text</type>
</CustomField>